--- a/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/Login-view.fxml
+++ b/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/Login-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minicinemanaz.com.nazpedawi709378endassignment.controllers.LoginController">
+<VBox alignment="CENTER" spacing="10.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
