--- a/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/MainScreen-view.fxml
+++ b/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/MainScreen-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" fx:id="layout" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="646.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="minicinemanaz.com.nazpedawi709378endassignment.controllers.MainScreenController">
+<VBox fx:id="layout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <HBox prefHeight="78.0" style="-fx-background-color: black;">
             <children>
