--- a/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/SellTickets-view.fxml
+++ b/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/SellTickets-view.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.*?>
 
-    <VBox fx:id="layout" alignment="CENTER" prefHeight="315.0" prefWidth="609.0" style="-fx-padding: 20;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="layout" alignment="CENTER" prefHeight="446.0" prefWidth="609.0" style="-fx-padding: 20;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
         <children>
             <Label fx:id="sellTicketsLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="25.0" style="-fx-font-size: 24;" text="Sell Tickets" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
             </Label>
             <Label fx:id="roomLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="18.0" prefWidth="569.0" style="-fx-font-size: 18; -fx-background-color: green; -fx-text-fill: white; -fx-padding: 2 10;" text="Room 1" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
             </Label>
-            <TableView fx:id="showingsTableView" onMouseClicked="#handleTableClick" editable="true">
+            <TableView fx:id="showingsTableView" editable="true" onMouseClicked="#handleTableClick">
                 <columns>
                     <TableColumn fx:id="startDateColumn" prefWidth="130" style="-fx-alignment: CENTER_LEFT;" text="Start">
                         <cellValueFactory>
