end assignment done.

--- a/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/ManageShowings-view.fxml
+++ b/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/ManageShowings-view.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.*?>
@@ -8,10 +7,9 @@
 <?import javafx.scene.text.*?>
 
 <VBox style="-fx-padding: 20;" alignment="CENTER" prefHeight="315.0" prefWidth="609.0" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
-        <children>
-            <Label fx:id="manageShowingsLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="25.0" style="-fx-font-size: 24;" text="Manage Showings" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+            <Label fx:id="manageShowingsLabel" maxWidth="Infinity" prefHeight="25.0" style="-fx-font-size: 24;" text="Manage Showings" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
             </Label>
-            <Label fx:id="roomLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="18.0" prefWidth="569.0" style="-fx-font-size: 18; -fx-background-color: green; -fx-text-fill: white; -fx-padding: 2 10;" text="Room 1" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
+            <Label fx:id="roomLabel" maxWidth="Infinity" prefHeight="18.0" prefWidth="569.0" style="-fx-font-size: 18; -fx-background-color: green; -fx-text-fill: white; -fx-padding: 2 10;" text="Room 1" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
             </Label>
             <TableView fx:id="showingsTableView" onMouseClicked="#handleTableClick" editable="true">
                 <columns>
@@ -25,12 +23,12 @@
                             <PropertyValueFactory property="endDate" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn fx:id="titleColumn" prefWidth="230" style="-fx-alignment: CENTER_LEFT;" text="Title">
+                    <TableColumn fx:id="titleColumn" prefWidth="280" style="-fx-alignment: CENTER_LEFT;" text="Title">
                         <cellValueFactory>
                             <PropertyValueFactory property="title" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn fx:id="seatsLeftColumn" prefWidth="80" style="-fx-alignment: CENTER_LEFT;" text="Seats Left">
+                    <TableColumn fx:id="seatsLeftColumn" style="-fx-alignment: CENTER_LEFT;" text="Seats Left">
                         <cellValueFactory>
                             <PropertyValueFactory property="seatsLeft" />
                         </cellValueFactory>
@@ -65,7 +63,6 @@
                 </Button>
             </HBox>
             <HBox alignment="CENTER_LEFT" style="-fx-padding: 10 0 0 0;">
-                <Label fx:id="errorMessageLabel" alignment="CENTER_LEFT" style="-fx-font-weight: bold;" textFill="red" />
+                <Label fx:id="errorMessageLabel" style="-fx-font-weight: bold;" textFill="red" />
             </HBox>
-        </children>
     </VBox>
