--- a/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/SellTickets-view.fxml
+++ b/src/main/resources/minicinemanaz/com/nazpedawi709378endassignment/SellTickets-view.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox fx:id="layout" alignment="CENTER" prefHeight="446.0" prefWidth="609.0" style="-fx-padding: 20;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
-        <children>
-            <Label fx:id="sellTicketsLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="25.0" style="-fx-font-size: 24;" text="Sell Tickets" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+<VBox alignment="CENTER" prefHeight="446.0" prefWidth="609.0" style="-fx-padding: 20;" VBox.vgrow="ALWAYS" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+            <Label fx:id="sellTicketsLabel" maxWidth="Infinity" prefHeight="25.0" style="-fx-font-size: 24;" text="Sell Tickets" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
             </Label>
-            <Label fx:id="roomLabel" alignment="CENTER_LEFT" maxWidth="Infinity" prefHeight="18.0" prefWidth="569.0" style="-fx-font-size: 18; -fx-background-color: green; -fx-text-fill: white; -fx-padding: 2 10;" text="Room 1" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
+            <Label fx:id="roomLabel" maxWidth="Infinity" prefHeight="18.0" prefWidth="569.0" style="-fx-font-size: 18; -fx-background-color: green; -fx-text-fill: white; -fx-padding: 2 10;" text="Room 1" HBox.hgrow="ALWAYS" VBox.vgrow="NEVER">
             </Label>
             <TableView fx:id="showingsTableView" editable="true" onMouseClicked="#handleTableClick">
                 <columns>
@@ -24,12 +23,12 @@
                             <PropertyValueFactory property="endDate" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn fx:id="titleColumn" prefWidth="230" style="-fx-alignment: CENTER_LEFT;" text="Title">
+                    <TableColumn fx:id="titleColumn" prefWidth="280" style="-fx-alignment: CENTER_LEFT;" text="Title">
                         <cellValueFactory>
                             <PropertyValueFactory property="title" />
                         </cellValueFactory>
                     </TableColumn>
-                    <TableColumn fx:id="seatsLeftColumn" prefWidth="80" style="-fx-alignment: CENTER_LEFT;" text="Seats Left">
+                    <TableColumn fx:id="seatsLeftColumn" style="-fx-alignment: CENTER_LEFT;" text="Seats Left">
                         <cellValueFactory>
                             <PropertyValueFactory property="seatsLeft" />
                         </cellValueFactory>
@@ -38,7 +37,7 @@
             </TableView>
 
             <HBox alignment="CENTER_LEFT" style="-fx-padding: 10 0 0 0;">
-                <Label fx:id="selectedShowingLabel" alignment="CENTER_LEFT" style="-fx-font-weight: bold; -fx-padding: 10;" textFill="red" />
+                <Label fx:id="selectedShowingLabel" style="-fx-font-weight: bold; -fx-padding: 10;" textFill="red" />
             </HBox>
 
                 <Button fx:id="selectSeatsButton" onAction="#onSelectSeatsClick" style="-fx-background-color: blue; -fx-text-fill: white; -fx-padding: 10;" text="Select Seat(s)">
@@ -49,5 +48,4 @@
                         <Font size="15.0" />
                     </font>
             </Button>
-        </children>
     </VBox>
